--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "portfoliosite",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-beta",
   "author": "Arvin Ziba",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/server"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
