--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "portfoliosite",
-  "version": "2.0.0-beta",
+  "version": "2.0.0",
   "author": "Arvin Ziba",
   "private": true,
   "scripts": {
     "start": "node ./bin/server"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
